# webrtc-audio-processing-java

./: .gitignore  .mise.toml  README.md  build.gradle.kts  settings.gradle.kts
.dev/docs/design/: 2026-03-31-java-wrapper-design.md
.dev/docs/plans/: 2026-03-31-java-wrapper-plan.md
.github/workflows/: build.yml  release.yml
gradle/: libs.versions.toml
native/: Cargo.toml
native/src/: lib.rs
webrtc-audio-processing/: build.gradle.kts
webrtc-audio-processing-natives/: build.gradle.kts
webrtc-audio-processing/src/main/java/com/manhhavu/webrtc/audio/: AdaptiveDigital.java  AnalogGainController.java  AnalogMicGainEmulation.java  CaptureAmplifier.java  ClippingPredictor.java  ClippingPredictorMode.java  Config.java  DownmixMethod.java  EchoCanceller.java  ErrorCode.java  FixedDigital.java  GainController.java  GainControllerMode.java  HighPassFilter.java  NativeLib.java  NativeLibLoader.java  NoiseSuppression.java  NoiseSuppressionLevel.java  Pipeline.java  PipelineProcessingRate.java  Processor.java  ProcessorException.java  Stats.java
webrtc-audio-processing/src/test/java/com/manhhavu/webrtc/audio/: ConfigTest.java  ProcessorTest.java
